# squire

./: .env.dev  .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  app.py  code_generation_chain.ipynb  config.py  docker-compose.yml  feature_generation.ipynb  ingest_docs.py  load_nextjs_docs.ipynb  package-lock.json  package.json  predictions.txt  requirements.txt  storage.db  storage.ipynb
.bin/: squire-cli
.chroma/index/: id_to_uuid_525a1c1b-09d1-4963-8aaa-6f10103c751c.pkl  index_metadata_525a1c1b-09d1-4963-8aaa-6f10103c751c.pkl  uuid_to_id_525a1c1b-09d1-4963-8aaa-6f10103c751c.pkl
apps/cli/: go.mod  package-lock.json  package.json
apps/core/: app.py  config.py  feature_generation.ipynb  load_nextjs_docs.ipynb  requirements.txt
apps/demo-ui/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/squire-react/: .env.local  .swcrc  cli.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/squire-server/squire/: Cargo.toml
apps/squire-server/squire/src/: config.rs  lib.rs  webserver.rs
apps/squire-ui/: README.md  build.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/squire-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/squire-ui/src-tauri/src/: backend.rs  main.rs  qdrant.rs  state.rs  testplugin.rs
apps/ui/: package-lock.json  package.json
chains/: code_generation.py
codegen/: __init__.py  agent.py  codegen.py
codegen/prompts/: file_descriptions.py  system.py
codegen/tools/: __init__.py  conventions.py  filesystem.py  format_file_output.py  get_files_for_feature_description.py
document_loaders/: load_markdown_docs.py  load_njs_docs.py
my-app/: package-lock.json  package.json  tsconfig.json
my-app/components/: MainContainer.tsx  Prompt.tsx
my-app/lib/: supabaseClient.js
prompts/: file_descriptions.py
storage/: __init__.py  database.py  documents.py
supabase/: config.toml
(+74 files in other folders)
