[package]
name = "squire"
version = "0.1.0"
edition = "2021"
default-run = "squire"

[[bin]]
name = "squire"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.17"
axum-extra = "0.7.4"
clap = { version = "4.2.4", features = ["derive"] }
qdrant-client = "1.1.1"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["rt-multi-thread"] }
tonic = "0.9.2"
tracing = "0.1.38"
